--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
   "name": "aws-like-project",
+  "private": true,
   "version": "1.0.0",
-  "description": "",
+  "description": "Like Project",
+  "license": "MIT",
+  "scripts": {
+    "build": "nest build",
+    "start": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+  },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.585.0",
     "@aws-sdk/lib-dynamodb": "^3.585.0",
+    "@codegenie/serverless-express": "^4.15.0",
+    "@nestjs/common": "^10.4.3",
+    "@nestjs/core": "^10.4.3",
+    "aws-lambda": "^1.0.7",
     "express": "^4.19.2",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/platform-express": "^10.4.3",
+    "typescript": "^5.6.2"
   }
 }
