--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "deploy": "nest build && [[ -d layers/nodejs ]] || rm -rf layers/nodejs && mkdir -p layers/nodejs && cp -r node_modules layers/nodejs && sls deploy"
+    "deploy": "nest build && [[ -d layers/nodejs ]] || rm -rf layers/nodejs && mkdir -p layers/nodejs && cp -r node_modules layers/nodejs && sls deploy && [[ -d layers/nodejs ]] || rm -rf layers/nodejs"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.585.0",
