--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,8 +46,11 @@ name: 'Terraform'
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
+    paths: ["terraform/**"]
   pull_request:
+    branches: [main]
+    paths: ["terraform/**"]
 
 permissions:
   contents: read
