--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -77,6 +77,10 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+    - name: Go to TF folder
+      run: |
+        cd terraform
+
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
@@ -94,3 +98,7 @@ jobs:
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
+
+    - name: Finishing
+      run: |
+        cd ..
